trunk/Archive2/10/deacddf95fd26f/output
main.cpp:11:27: error: too many arguments to function call, expected 1, have 2
    auto x = f<int>; x(3, 4);
                     ~    ^
1 error generated.
